
<RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/resultFragment"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            tools:context=".ButtonAdapter$ResultsFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/txt_question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtQ1"
            tools:text="@string/txt_question1"
            android:contentDescription="@string/txt_question1"
            style="@style/txt_question"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="56dp" />
         
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/txt_question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtQ2"
            tools:text="@string/txt_question2"
            android:contentDescription="@string/txt_question2"
            style="@style/txt_question"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

        <TextView
            android:text="@string/txt_question3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtQ3"
            tools:text="@string/txt_question3"
            android:contentDescription="@string/txt_question3"
            style="@style/txt_question"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="141dp"
            android:layout_alignParentStart="true" />

    </LinearLayout>

</RelativeLayout>


